@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>urxvtc - control the urxvtd daemon</title>
+<title>rxvtc - control the rxvtd daemon</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link rev="made" href="mailto:perl-binary@plan9.de" />
 </head>
@@ -28,53 +28,61 @@
 <p>
 </p>
 <h1><a name="name">NAME</a></h1>
-<p>urxvtc - control the urxvtd daemon</p>
+<p>rxvtc - control the rxvtd daemon</p>
 <p>
 </p>
 <hr />
 <h1><a name="synopsis">SYNOPSIS</a></h1>
-<p><strong>urxvtc</strong> [same options as for urxvt]</p>
+<p><strong>rxvtc</strong> [same options as for rxvt]</p>
 <p>
 </p>
 <hr />
 <h1><a name="description">DESCRIPTION</a></h1>
-<p>This manpage describes the <strong>urxvtc</strong> client program. It connects
-to the <strong>urxvtd</strong> daemon and requests a new terminal window. It
-takes the same arguments as the <strong>urxvt</strong> program. The environment
+<p>This manpage describes the <strong>rxvtc</strong> client program. It connects
+to the <strong>rxvtd</strong> daemon and requests a new terminal window. It
+takes the same arguments as the <strong>rxvt</strong> program. The environment
 will also be respected. Currently, it always returns immediately after
 contacting the daemon.</p>
 <p>
 </p>
 <hr />
 <h1><a name="options">OPTIONS</a></h1>
-<p>All options that are valid for <strong>urxvt</strong> are valid for
-<strong>urxvtc</strong>, too. Please note that all options are currently
-interpreted in the context of the daemon process, which makes a difference
-for options that specify a file descriptor (such as <strong>-pty-fd</strong>).</p>
+<p>All options that are valid for <strong>rxvt</strong> are valid for
+<strong>rxvtc</strong>, too. Please note that options are interpreted in the
+context of the daemon process. However, as current working directory,
+process environment and any file handles (e.g. for <code>-pty-fd</code>) are
+preserved, this rarely makes a difference.</p>
 <p>
 </p>
 <hr />
 <h1><a name="exit_status">EXIT STATUS</a></h1>
-<p>If everything went well, urxvtc returns with an exit status of <code>0</code>.
+<p>If everything went well, rxvtc returns with an exit status of <code>0</code>.
 If contacting the daemon fails, it exits with the exit status <code>2</code>. In all other error
 cases it returns with status <code>1</code>.</p>
 <p>This can be used to implement auto-starting behaviour, by checking for an
-exit status of <code>2</code>, running <code>urxvtd -f -q</code> and retrying the call
-to urxvtc.</p>
+exit status of <code>2</code>, running <code>rxvtd -f -q</code> and retrying the call
+to rxvtc, like this:</p>
+<pre>
+   #!/bin/sh
+   rxvtc &quot;$@&quot;
+   if [ $? -eq 2 ]; then
+      rxvtd -q -o -f
+      rxvtc &quot;$@&quot;
+   fi</pre>
 <p>
 </p>
 <hr />
 <h1><a name="environment">ENVIRONMENT</a></h1>
 <p>All environment variables of the current process will be made available
-to the new instance, and will be interpreted as if <strong>urxvt</strong> were
+to the new instance, and will be interpreted as if <strong>rxvt</strong> were
 started directly.</p>
 <dl>
 <dt><strong><a name="item_rxvt_socket"><strong>RXVT_SOCKET</strong></a></strong>
 
 <dd>
-<p>Both urxvtc and urxvtd use the environment variable
+<p>Both rxvtc and rxvtd use the environment variable
 <em>RXVT_SOCKET</em> to create a listening socket and to contact the
-urxvtd, respectively. If the variable is missing,
+rxvtd, respectively. If the variable is missing,
 <em>$HOME/.rxvt-unicode-<em>&lt;nodename</em> </em>&gt; &gt;&gt;&gt; is used.  The variable must
 specify the absolute path of the socket to create.</p>
 </dd>
@@ -84,7 +92,7 @@ specify the absolute path of the socket to create.</p>
 </p>
 <hr />
 <h1><a name="see_also">SEE ALSO</a></h1>
-<p>urxvt(7), <code>urxvtd(1)</code></p>
+<p>rxvt(7), <code>rxvtd(1)</code></p>
 
 </body>
 
