@@ -17,9 +17,10 @@ contacting the daemon.
 =head1 OPTIONS
 
 All options that are valid for B<@@RXVT_NAME@@> are valid for
-B<@@RXVT_NAME@@c>, too. Please note that all options are currently
-interpreted in the context of the daemon process, which makes a difference
-for options that specify a file descriptor (such as B<-pty-fd>).
+B<@@RXVT_NAME@@c>, too. Please note that options are interpreted in the
+context of the daemon process. However, as current working directory,
+process environment and any file handles (e.g. for C<-pty-fd>) are
+preserved, this rarely makes a difference.
 
 =head1 EXIT STATUS
 
@@ -29,7 +30,14 @@ cases it returns with status C<1>.
 
 This can be used to implement auto-starting behaviour, by checking for an
 exit status of C<2>, running C<@@RXVT_NAME@@d -f -q> and retrying the call
-to @@RXVT_NAME@@c.
+to @@RXVT_NAME@@c, like this:
+
+   #!/bin/sh
+   @@RXVT_NAME@@c "$@"
+   if [ $? -eq 2 ]; then
+      @@RXVT_NAME@@d -q -o -f
+      @@RXVT_NAME@@c "$@"
+   fi
 
 =head1 ENVIRONMENT
 
